--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -80,6 +80,13 @@
 	publisher = "http://camel.apache.org"
 }
 
+@book{bloch2008,
+	author = "Joshua Bloch",
+	title = "Effective Java (2nd Edition)",
+	year = 2008,
+	publisher = "Addison-Wesley"
+}
+
 @misc{eaipatterns, 
 	title = "EIP Patterns homepage",
 	howpublished = "\url{http://www.eaipatterns.com/toc.html}",
