--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -54,6 +54,13 @@
 	publisher = "Masaryk University in Brno"
 }
 
+@book{fielding2000,
+	author = "Roy Thomas Fielding",
+	title = "chapter 5 from Architectural Styles and the Design of Network-based Software Architectures",
+	year = 2000,
+	publisher = "University Of California, Irvine"
+}
+
 @article{name06,
 	Author = {Name},
 	Date-Added = {2007-09-06 11:30:06 +0200},
