--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -61,6 +61,25 @@
 	publisher = "University Of California, Irvine"
 }
 
+@book{hohpe2003,
+	author = "Gregor Hohpe, Bobby Woolf",
+	title = "Enterprise Integration Patterns: Designing, Building, and Deploying Messaging Solutions",
+	year = 2003,
+	publisher = "Addison-Wesley Professional"
+}
+
+@book{ibsen2010,
+	author = "Claus Ibsen, Jonathan Anstey",
+	title = "Camel in Action",
+	year = 2010,
+	publisher = "Manning Publications"
+}
+
+@book{camel,
+	title = " Apache Camel official website",
+	publisher = "http://camel.apache.org"
+}
+
 @article{name06,
 	Author = {Name},
 	Date-Added = {2007-09-06 11:30:06 +0200},
